<resources>
    <string name="app_name">IM</string>
    <string name="username">QQ号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="newuser">新用户</string>
    <string name="register_name">用户名</string>
    <string name="register">注册</string>
    <string name="conversation">消息</string>
    <string name="contact">联系人</string>
    <string name="plugin">动态</string>
    <string name="menu_add_friend">添加好友</string>
    <string name="menu_scan">分享好友</string>
    <string name="menu_about">关于我们</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">退出当前帐号</string>
    <string name="toolbar_search">搜索</string>
</resources>
